[metadata]
name = pythreadex
version = 0.1
description = Utility for retrieving and plotting ThreadEx data
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomer Burg
platform = any
keywords = meteorology, weather
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Science/Research
    Operating System :: OS Independent
url = https://github.com/tomerburg/pythreadex
project_urls =
    Source Code = https://github.com/tomerburg/pythreadex

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.6
install_requires =
    matplotlib>=2.2.2
    numpy>=1.14.3
    scipy>=1.1.0
    pandas>=1.3.0

[options.packages.find]
where = src
